fix(core): replace `List.copyOf` with `Collections.unmodifiableList` for java 8 compatibility